--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,40 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/splunk/job/oqjrbfw5'>Splunk Careers - Senior Product Manager/Product Manager - Developer Programs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://coachhub.join.com/jobs/458113-senior-product-manager-m-w-d'>Job @ Coachhub (Berlin): Senior Product Manager (m... | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/AveryDennison/743999698384534-product-manager-digital-printing-materials-graphics-'>Avery Dennison Product Manager - Digital Printing Materials (Graphics) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Oegstgeest, Netherlands</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/rekki/4fd3cb95-3483-4286-857b-a38fdb0d9df0'>Rekki - Product Designer</a></h5> 
+<p><span class="badge badge-light">London  London</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://oyorooms.recruiterbox.com/jobs/fk03izb'>
+    Sr. Product Manager at OYO
+</a></h5> 
+<p><span class="badge badge-light">Hyderabad</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://resynetworkinc.applytojob.com/apply/oiRm8FFeTD/Product-Manager-Resy-Global-Service'>Product Manager - Resy Global Service - Resy Network Inc - Career Page</a></h5> 
+<p><span class="badge badge-light">New York, NY     New York City</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://snapsheet.applytojob.com/apply/vVlz52k6RR/Product-Manager'>Product Manager - Snapsheet - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698375427-senior-product-manager-growth-m-f-d-'>Omio Senior Product Manager Growth (m / f / d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -52,7 +86,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/innerworkings/job/olz7afwV'>InnerWorkings Careers - Senior Agile Product Owner</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/innerworkings/job/olz7afwV'>InnerWorkings Careers - Senior Agile Product Owner</a></h5> 
 <p><span class="badge badge-light">Prague, Czech Republic</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -60,7 +94,7 @@
 <p><span class="badge badge-light">New York, USA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://producthire.net/job/senior-product-manager-legal-systems/'>Senior Product Manager, Legal Systems | PRODUCTHIRE.NET</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/senior-product-manager-legal-systems/'>Senior Product Manager, Legal Systems | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">New York, USA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -84,7 +118,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://snap.hr/sky/job/adsmart-product-manager/0876de8dc6853de258d525b2ca4763fd/'>AdSmart Product Manager at Sky</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/sky/job/adsmart-product-manager/0876de8dc6853de258d525b2ca4763fd/'>AdSmart Product Manager at Sky</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -130,7 +164,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/senior-product-designer-11/'>Senior Product Designer | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://producthire.net/job/senior-product-designer-11/'>Senior Product Designer | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -164,7 +198,7 @@
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=ofpobfwX&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nBJTmMwQ'>Guidewire Software, Inc. Careers - Senior Product Manager - Dublin, Ireland</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=ofpobfwX&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nBJTmMwQ'>Guidewire Software, Inc. Careers - Senior Product Manager - Dublin, Ireland</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -215,6 +249,20 @@
 <h5><a href='https://boards.greenhouse.io/prowlerio/jobs/4486296002'>Job Application for Senior UX /  Product Designer at PROWLER.io</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://fastpay.applytojob.com/apply/mUJT2jHPFu/Senior-Product-Manager'>Senior Product Manager - FastPay - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 14, 2019 ... Apply to Senior Product Manager at FastPay in Framingham, MA.</p>
+<hr/>
+<h5><a href='https://theorem.applytojob.com/apply/kIRkn2iqvO/Senior-Product-Manager-REMOTE'>Senior Product Manager REMOTE - Theorem, LLC - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 17, 2019 ... We're looking for an experienced product manager to join the team at Theorem. It 
+is expected that you have lived the full product lifecycle, having brought mult.</p>
+<hr/>
+<h5><a href='https://resynetworkinc.applytojob.com/apply/oiRm8FFeTD/Senior-Product-Manager-Resy-Global-Service'>Senior Product Manager - Resy Global Service - Resy Network Inc ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... Apply to Senior Product Manager - Resy Global Service at Resy Network Inc in 
+New York, NY.</p>
 <hr/>
 <h5><a href='https://vkb.join.com/jobs/460742-product-designer-ux-ui-m-w-d'>Job @ uptodate Ventures (Munich): Product Designer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
@@ -276,7 +324,7 @@
 <p><span class="badge badge-light">Bristol, UK</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bixal/58b85f80-5082-4a0a-8fba-abbab172cc9f'>Bixal - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bixal/58b85f80-5082-4a0a-8fba-abbab172cc9f'>Bixal - Product Manager</a></h5> 
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -362,7 +410,7 @@
 <p><span class="badge badge-light">Foster City, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/shopify/e1b101da-0eb5-4273-9a3e-6bc6748ac157'>Shopify - Product Designer - Themes</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shopify/e1b101da-0eb5-4273-9a3e-6bc6748ac157'>Shopify - Product Designer - Themes</a></h5> 
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -411,53 +459,6 @@
 <h5><a href='https://jobs.lever.co/airwallex/5b3f9265-c396-43fe-8019-96bf75cfb8b5'>Airwallex - Lead Product Designer</a></h5> 
 <p><span class="badge badge-light">Melbourne  Australia</span></p>
 <p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://aig.wd1.myworkdayjobs.com/en-US/aig/job/London/Product-Manager----Investments-AI--Trade-Credit-_JR1907309-1'>Product Manager - Investments AI</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 13, 2019 ... Attracting top talent through an inclusive culture of freedom and responsibility;; 
-Pushing the boundaries of what's possible in advanced machine learning?...</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/sugarcrm/job/ocBnbfw5'>SugarCRM Careers - Senior Product Manager, Cloud Platform</a></h5> 
-<p><span class="badge badge-light">Cupertino, CANorth Carolina</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Believe/743999698138532-product-manager-customer-finance-h-f-'>Believe PRODUCT MANAGER - CUSTOMER FINANCE  (H/F) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">France</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Believe/743999698289573-product-manager-customer-content-management-h-f-'>Believe PRODUCT MANAGER - CUSTOMER CONTENT MANAGEMENT (H/F) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Paris, France</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://sanerjobs.com/job/product-manager-hotjar/177'>Product Manager at Hotjar - SanerJobs</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://peanut.recruitee.com/o/senior-product-designer'>
-      Senior Product Designer - Peanut
-    </a></h5> 
-<p><span class="badge badge-light">London, United Kingdom</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://justaddmusic.join.com/jobs/465367-product-owner-m-f-d-loudly-app'>Job @ JAM Just Add Music (Berlin): Product Owner (... | JOIN</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Playtech/743999698276870-casino-product-manager'>Playtech Casino Product Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698275796-marketing-technology-product-manager'>Traveloka Marketing Technology Product Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Jakarta, Indonesia  Jakarta, Indonesia</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qahaVfwg&k=Job&j=oH31afwF&__jvst=Employee&__jvsd=sTrGdgwY&__jvsc=Twitter&bid=nEYRlMw5'>Santander Consumer USA Careers - Digital Product Manager</a></h5> 
-<p><span class="badge badge-light">Dallas, Texas</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://www.titania.com/about-us/careers/product-owner/?utm_content=104199218&utm_medium=social&utm_source=twitter&hss_channel=tw-508940978'>Product Owner - Titania</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
 <hr/>
 
 
